fix: styling for index. removed margin and added gap with flexbox

--- a/src/tjenesteomrader/components/entrance/entrance.module.css
+++ b/src/tjenesteomrader/components/entrance/entrance.module.css
@@ -16,7 +16,6 @@
   gap: 1.5rem;
   margin-left: auto;
   width: 44.063rem;
-  margin-bottom: 1.5rem;
 }
 
 .serviceArea__bottom p {
